Resources/views/less/layout.less
/* ... */
@media (min-width: @screen-sm) {
    body.left-bar-push {
        margin-left: 40px;
    }
    #top_bar.left-bar-push {
        padding-left: 40px;
    }
}

@media (max-width: (@screen-sm - 1)) {
    body.left-bar-push {
        margin-left: 0;
    }
    #top_bar.left-bar-push {
        padding-left: 0;
    }
}

/************/
/*  Top Bar */
/************/

#top_bar {
    @media(max-width: (@screen-md - 1)) {
        .dropdown-header {
            color: lighten(@navbar-inverse-bg, 20%);
            padding-left: 20px;
        }

        .dropdown-menu {
            position: relative;
            width: 100%;
            border: none;
            .box-shadow(none);
            background: @navbar-inverse-bg;
            li a {
                padding-left: 15px;
                margin: 5px;
                color: @navbar-inverse-link-color;
                &:hover {
                    color: @navbar-inverse-link-hover-color;
                }
            }
            .divider{
                display: none;
            }
        }
    }

    @media(min-width: @screen-md) {
         .dropdown-menu {
            position: absolute;
            left: auto;
            right:0;
        }
    }

    &.navbar.navbar-inverse.navbar-fixed-top {
        .navbar-brand {
            font-size:22px;
            color: #fff;
        }
    }

    .navbar-brand.logo {
        padding-top: 7px;
        padding-bottom: 0;
    }

    .navbar-collapse {
        margin-left: -15px;
    }

    &.break {
        .navbar-collapse.collapse {
            border: 1px solid red;
        }
    }
}

/************/
/*  Footer  */
/************/

#footer {
    width: 100%;
    position: relative;
    margin-top: @navbar-height + 10px;
    min-height: @navbar-height;
    background-color: @gray-lighter;
    color: lighten(@gray, 30%);

    .container {
        p, h1, h2, h3, h4, h5, h6 {
            margin: 15px;
            max-height: 100%;

            a {
                color: lighten(@gray, 30%);
                font-weight: bold;
            }
        }
    }
}

/************/
/*  menu    */
/************/

.list-group{

    .border-top-radius(@list-group-border-radius);
    .border-bottom-radius(@list-group-border-radius);

    .list-group-item.disabled {

        padding: 8px 15px !important;
        color: @panel-default-text;
        font-size: (@font-size-base * 1.125);
        background: @panel-default-heading-bg;
    }
}

.content-element {
    > .nav.nav-pills{
        margin-bottom: 5px;
        border: 1px solid transparent;
        &.admin:hover{
            border: 1px dashed lighten(@link-color, 20%);
        }
    }

    > .list-group {

        > div.list-group-item {
            padding: 0;
        }

        > a.list-group-item {
            cursor: pointer;
        }

        > .list-group-item  {
            > a {
                display: block;
                padding: 10px 15px;
                color: @gray;

                &:hover {
                    text-decoration: none;
                    background: @panel-default-heading-bg;
                }
            }

            //link inside a div case
            &.active > a,
            &.active > a:hover {
                color: #fff;
                background: @link-color;
            }
        }
    }
}

/***********/
/* WIDGETS */
/***********/

.panel-group > .panel .panel-heading .btn
{
    position: absolute;
    right: 3px;
    top: 3px
}

.notification-date {
    text-decoration: underline;
    font-style: italic;
}

/*********************/
/* RESOURCES MANAGER */
/*********************/
@media (max-width: 1024px)
{
    .resource-manager, .creator {
        .navbar {

            > ul > li > a {
                float: left;
            }

            > .navbar-nav, > .navbar-form
            {
                margin: 0;
                border:none;
            }
        }
    }
}

.resource-manager
{
    position: relative;

    .navbar {
        margin: 0;

        a.disabled {
            &, &:hover {
                color: lighten(@gray-light, 20%);
            }

            & .caret {
                visibility: hidden;
            }
        }

    .nav > li > a,
    .nav ul {
            cursor: pointer;
        }
    }

    .filters {
        background: #fff;
        border: 1px solid @gray-lighter;
        .box-shadow(0 1px 3px rgba(0,0,0,.25));
        margin: 5px;
        padding: 5px;
        .border-top-radius(@border-radius-base);
        .border-bottom-radius(@border-radius-base);
        z-index: (@zindex-modal-background - 11);

        .row {
            position: relative;
        }
    }

    .resources
    {
        margin: 0;
        padding: 0 0 10px 0;

        &.dropzone {
            padding-bottom: 50px;
        }
    }

    .results {
        padding-left: 20px;

        table {
            margin-top: 20px;
        }

        .checkbox-column {
            width: 18px;
        }
    }
}

.filters-arrow-border
{
    border-color: transparent transparent @gray-lighter transparent;
    border-style: solid;
    border-width: 10px;
    height: 0;
    width: 0;
    position: absolute;
    top: -24px;
    right: 27px;
    z-index: (@zindex-modal-background - 11);
}

.filters-arrow
{
    border-color: transparent transparent #fff transparent;
    border-style: solid;
    border-width: 10px;
    height: 0;
    width: 0;
    position: absolute;
    top: -23px;
    right: 27px;
    z-index: (@zindex-modal-background - 11);
}

.pointer-hand
{
    cursor: pointer;
    cursor: hand;
}
/* ... */

